<resources>
    <string name="app_name">meteoapp</string>
    <!-- home page example data values -->
    <string name="sample_min_temperature">22°</string>
    <string name="sample_date">10/09</string>
    <string name="sample_mm">0mm</string>
    <string name="sample_weather_icon">weather icon</string>
    <string name="sample_kmh_placeholder">12kmh</string>
    <string name="sample_max_temperature">31°</string>
    <string name="sample_city_region">Catania, Sicilia</string>
    <!-- home page ui fixed values -->
    <string name="next_5_days">Next 5 days</string>
    <string name="min">min</string>
    <string name="max">max</string>
    <string name="rainfall">precip.</string>
    <!-- Giorni della settimana -->
    <string name="tomorrow">Tomorrow</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <!-- bottom nav icons -->
    <string name="home_icon">Home</string>
    <string name="today_icon">Today</string>
    <string name="tomorrow_icon">Tomorrow</string>
    <string name="search_icon">Search</string>
    <string name="home_fragment">HOME!</string>
    <string name="recent_researches">Recent researches</string>
    <string name="search_a_city">Search a city</string>
    <string name="example_temperature_search">12°</string>
    <string name="example_search_screen_city">Palermo</string>
    <string name="screen_search_rainfall_text">precip</string>
    <string name="city">Palermo,Sicily</string>
    <string name="today">Today</string>
    <string name="today_date">Sunday 10 September</string>
    <string name="hour_now">11:00</string>
    <string name="grade_now">31°</string>
    <string name="humidity_now">0%</string>
    <string name="perceived">Perceived</string>
    <string name="UV">UV Index</string>
    <string name="humidity">Humidity</string>
    <string name="wind">wind</string>
    <string name="cover">Cover</string>
    <string name="rain">Rain</string>
    <string name="grade_perceived">45°</string>
    <string name="card_UV">5/10</string>
    <string name="humidity_percentage">60%</string>
    <string name="wind_speed">7Km/h</string>
    <string name="cover_percentage">24%</string>
    <string name="rain_cm">0cm</string>
    <string name="hour_for_every_hours">12:00</string>
    <string name="grade_for_every_hours">29</string>
    <string name="humidity_for_every_hours">0</string>
    <string name="sun">sun</string>
    <string name="drop">drop</string>
    <string name="error_message"> There was a problem with uploading your data. Please check your network and try again.</string>
    <string name="retry">Retry</string>
    <string name="error_search_too_short">Insert atleast 4 letters</string>
    <string name="error_search_invalid_city">No valid city found</string>

<!--    wind direction-->
    <string name="NNE">NNE</string>
    <string name="ENE">ENE</string>
    <string name="ESE">ESE</string>
    <string name="SSE">SSE</string>
    <string name="SSW">SSW</string>
    <string name="WSW">WSW</string>
    <string name="WNW">WNW</string>
    <string name="NNW">NNW</string>

    <!--    forecast info-->
    <string name="clear">Clear sky</string>
    <string name="mainly_clear">Mainly clear</string>
    <string name="partly_cloudy">partly cloudy</string>
    <string name="overcast">Overcast</string>
    <string name="fog">Fog</string>
    <string name="depositing_rime_fog">Depositing rime fog</string>
    <string name="drizzle_light">Drizzle light intensity</string>
    <string name="drizzle_moderate">Drizzle moderate intensity</string>
    <string name="drizzle_dense">Drizzle dense intensity</string>
    <string name="freezing_drizzle_light">Freezing drizzle light intensity</string>
    <string name="freezing_drizzle_dense">Freezing drizzle dense intensity</string>
    <string name="slight_rain">Slight rain intensity</string>
    <string name="moderate_rain">Moderate rain intensity</string>
    <string name="heavy_rain">Heavy rain intensity</string>
    <string name="freezing_light_rain">Freezing light rain</string>
    <string name="freezing_heavy_intensity_rain">Freezing heavy intensity rain</string>
    <string name="slight_snow">Slight snow</string>
    <string name="moderate_snow">Moderate snow</string>
    <string name="heavy_snow">Heavy snow</string>
    <string name="snow_grains">Snow grains</string>
    <string name="slight_rain_shower">Slight rain shower</string>
    <string name="moderate_rain_shower">Moderate rain shower</string>
    <string name="violent_rain_shower">Violent rain shower</string>
    <string name="slight_snow_shower">Slight snow shower</string>
    <string name="heavy_snow_shower">Heavy snow shower</string>
    <string name="thunderstorm_slight_moderate">Thunderstorm slight moderate</string>
    <string name="thunderstorm_with_slight_hail">Thunderstorm with slight hail</string>
    <string name="thunderstorm_with_heavy_hail">Thunderstorm with heavy hail</string>
    <string name="error">error</string>

    <string name="null_city">Search a city in search screen</string>

</resources>