<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:content="com.example.myApplication.MainActivity">

    <item
        android:id="@+id/home"
        android:title="@string/home_icon"
        android:icon="@drawable/home"
        />
    <item
        android:id="@+id/today"
        android:title="@string/today_icon"
        android:icon="@drawable/day"
        />
    <item
        android:id="@+id/tomorrow"
        android:title="@string/tomorrow_icon"
        android:icon="@drawable/day"
        />
    <item
        android:id="@+id/search"
        android:title="@string/search_icon"
        android:icon="@drawable/search"
        />

</menu>