<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:id="@+id/item_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal">

        <LinearLayout
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens48dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

                <TextView
                    android:id="@+id/hour_item"
                    android:layout_width="@dimen/dimens50dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter"
                    android:text="@string/hour_for_every_hours"
                    android:layout_marginEnd="@dimen/dimens20dp"
                    android:textColor="@color/blue_text"
                    android:textSize="@dimen/dimens16sp" />

                <ImageView
                    android:id="@+id/weather_image_item"
                    android:layout_width="@dimen/dimens40dp"
                    android:layout_height="@dimen/dimens40dp"
                    android:contentDescription="@string/sun"
                    android:layout_marginEnd="@dimen/dimens20dp"
                    android:src="@drawable/sun" />

                <TextView
                    android:id="@+id/grade_item"
                    android:layout_width="@dimen/dimens50dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter"
                    android:text="@string/grade_for_every_hours"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimens20sp"
                    android:layout_marginEnd="@dimen/dimens20dp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/drop"
                    android:layout_width="@dimen/dimens27dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/drop"
                    android:src="@drawable/fluent_drop_16_filled" />

                <TextView
                    android:id="@+id/humidity_percentage_item"
                    android:layout_width="@dimen/dimens40dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter"
                    android:text="@string/humidity_for_every_hours"
                    android:textColor="@color/black"
                    android:layout_marginEnd="@dimen/dimens20dp"
                    android:textSize="@dimen/dimens20sp" />

                <ImageView
                    android:id="@+id/arrow_cardView"
                    android:layout_width="@dimen/dimens40dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:rotation="180"
                    android:src="@drawable/arrow" />

        </LinearLayout>

        <ImageView
            android:id="@+id/vector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens10dp"
            android:scaleType="fitXY"
            android:src="@drawable/vector_1" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens213dp"
            android:layout_marginVertical="@dimen/dimens24dp"
            android:layout_marginHorizontal="@dimen/dimens24dp"
            app:cardBackgroundColor="@color/iceCardView"
            android:elevation="@dimen/dimens24dp"
            app:cardElevation="@dimen/dimens24dp"
            app:cardCornerRadius="@dimen/dimens10dp"
            android:visibility="gone"
            android:background="@color/black">
                <TextView
                    android:id="@+id/cardPerceived"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimens18dp"
                    android:layout_marginTop="@dimen/dimens18dp"
                    android:text="@string/perceived"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimens16sp"
                    android:fontFamily="@font/inter"/>

                <TextView
                    android:id="@+id/cardPerceivedGradeVal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimens18dp"
                    android:layout_marginTop="@dimen/dimens36dp"
                    android:text="@string/grade_perceived"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimens16sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/inter"/>

                <TextView
                    android:id="@+id/cardUv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_dimens198dp"
                    android:layout_marginTop="@dimen/dimens18dp"
                    android:text="@string/UV"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimens16sp"
                    android:fontFamily="@font/inter"/>

                <TextView
                    android:id="@+id/cardUvVal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_dimens198dp"
                    android:layout_marginTop="@dimen/dimens36dp"
                    android:text="@string/card_UV"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimens16sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/inter"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/vector_1"
                    android:layout_marginTop="@dimen/dimens72dp"
                    android:layout_marginStart="@dimen/dimens20dp"
                    android:layout_marginEnd="@dimen/dimens20dp" />

                <TextView
                    android:id="@+id/cardHumidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimens18dp"
                    android:layout_marginTop="@dimen/dimens84dp"
                    android:text="@string/humidity"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimens16sp"
                    android:fontFamily="@font/inter"/>

                <TextView
                    android:id="@+id/cardHumidityVal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimens18dp"
                    android:layout_marginTop="@dimen/dimens106dp"
                    android:text="@string/humidity_percentage"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimens16sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/inter"/>

                <TextView
                    android:id="@+id/cardWind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_dimens198dp"
                    android:layout_marginTop="@dimen/dimens84dp"
                    android:text="@string/wind"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimens16sp"
                    android:fontFamily="@font/inter"/>

                <TextView
                    android:id="@+id/cardWindVal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_dimens198dp"
                    android:layout_marginTop="@dimen/dimens106dp"
                    android:text="@string/wind_speed"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimens16sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/inter"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/vector_1"
                    android:layout_marginTop="@dimen/dimens142dp"
                    android:layout_marginStart="@dimen/dimens20dp"
                    android:layout_marginEnd="@dimen/dimens20dp" />

                <TextView
                    android:id="@+id/cardCoverage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimens18dp"
                    android:layout_marginTop="@dimen/dimens153dp"
                    android:text="@string/cover"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimens16sp"
                    android:fontFamily="@font/inter"/>

                <TextView
                    android:id="@+id/cardCoverageVal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimens18dp"
                    android:layout_marginTop="@dimen/dimens175dp"
                    android:layout_marginBottom="@dimen/dimens18dp"
                    android:text="@string/cover_percentage"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimens16sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/inter"/>

                <TextView
                    android:id="@+id/cardRain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_dimens198dp"
                    android:layout_marginTop="@dimen/dimens153dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/rain"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimens16sp" />

                <TextView
                    android:id="@+id/cardRainVal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_dimens198dp"
                    android:layout_marginTop="@dimen/dimens175dp"
                    android:text="@string/rain_cm"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimens16sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/inter"/>
        </androidx.cardview.widget.CardView>

</LinearLayout>
